# random_quote

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
random_quote/: main.py
