[project]
name = "random-quote"
version = "0.1.0"
description = ""
authors = [
    {name = "raylai",email = "chunjueilai@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "requests (>=2.32.4,<3.0.0)"
]

[tool.poetry]
packages = [{include = "random_quote", from = "src"}]


[tool.poetry.group.flake8.dependencies]
isort = "^6.0.1"
pre-commit = "^4.2.0"
conventional-commit = "^0.4.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
